# indie

./: .gitignore  Makefile  manage.py  pyproject.toml
.github/workflows/: deploy.yaml  styles.yml  tests.yml
bookings/: admin.py  factories.py  forms.py  models.py  order_views.py  services.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
bookings/templates/bookings/: booking_form.html
bookings/tests/: test_forms.py  test_models.py  test_views.py
cart/: cart.py  forms.py  urls.py  views.py
cart/templates/cart/: cart_detail.html
cart/tests/: test_cart.py  test_views.py
config/: gunicorn.conf.py  nginx.conf
main/: settings.py  urls.py
pages/: forms.py  urls.py  views.py
pages/templates/pages/: about.html  contact.html  feedback.html  get_listed.html  help.html  home.html  loading.html  maintenance.html  privacy.html  sitemap.html  support.html  terms.html
pages/tests/: test_forms.py  test_views.py
payments/: urls.py  views.py
payments/templates/payments/: home.html  payment_fail.html  payment_pending.html  payment_success.html
payments/tests/: test_views.py
portal/: mixins.py  urls.py  views.py
portal/templates/portal/: calendar.html  dashboard.html  home.html  manage_property_list.html  property_create.html  property_delete.html  property_update.html  schedule.html  (+1 more)
portal/tests/: test_views.py
properties/: admin.py  factories.py  managers.py  models.py  samples.py  urls.py  views.py
properties/migrations/: 0001_initial.py  0002_room.py  0003_alter_room_num_of_guests_alter_room_weekend_price.py  0004_alter_room_weekday_price.py  0005_addon_alter_room_weekday_price.py  0005_alter_room_weekday_price_addon.py  0006_addon_active.py  0006_property_active_room_active.py  0007_occurrence.py  0008_alter_occurrence_availability_and_more.py  0009_occurrence_unique_occurrence.py  0010_alter_occurrence_options_alter_property_options_and_more.py  0011_alter_room_options.py  0012_alter_addon_options_addon_unique_addon.py  0013_alter_room_options.py  0014_alter_room_options.py
properties/tests/: test_models.py
templates/: 403.html  404.html  500.html  robots.txt
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/admin/: base.html
templates/includes/: alert.html  navigation-light.html  navigation.html  session.html  sidebar.html  toast.html
templates/layouts/: base-auth.html  base-sidebar.html  base.html
templates/socialaccount/: connections.html  login.html  signup.html
users/: adapter.py  admin.py  factories.py  forms.py  signals.py  views.py
users/tests/: test_adapters.py  test_views.py
(+13 files in other folders)
