[tool.poetry]
name = "indie"
version = "0.1.0"
description = "Hostel booking redefined"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.31.0"
django-allauth = "^0.57.0"
django-extensions = "^3.2.3"
factory-boy = "^3.3.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
