[tool.poetry]
name = "indie"
version = "0.1.0"
description = "Hostel booking redefined"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.31.0"
django-allauth = "^0.57.0"
django-extensions = "^3.2.3"
factory-boy = "^3.3.0"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
coverage = "^7.3.2"
pillow = "^10.1.0"
django-countries = "^7.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
djlint = "^1.34.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
select = [
  "ARG", "B", "DJ", "DTZ", "E", "F",  "G",  "N",
  "PL", "PTH", "RET", "RUF", "SIM", "TRY"
  ]
unfixable = ["B"]
ignore = ["D417"]
exclude = [
    "*migrations*",
    ]

[tool.isort]
profile = "black"
skip = ["docs", "migrations"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
exclude = '''
/(
  | migrations
  | docs
)/
'''

[tool.djlint]
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
blank_line_before_tag = "load,extends,include,block"
blank_line_after_tag = "load,extends,include,endblock"
close_void_tags=true
custom_blocks="toc,blocktrans"
profile = "django"
max_line_length = 120
max_attribute_length = 120
use_gitignore = true
format_attribute_template_tags = true
format_css=true
format_js=true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "main/asgi.py",
    "main/wsgi.py",
    "main/settings.py",
    "manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true